monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2026/A2026.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2026;

grammar A2026 {

  a;

  A;

}
